# EAG-V1

./: .gitignore  manifest.json  popup.html  popup.js
lesson2/: background.js  content.js  manifest.json
lesson3/: local_Session3_assignment.ipynb  manifest.json  popup.html  popup.js
lesson4/: example2-3.py  talk2mcp-2.py
lesson5/: README.md  example2-3.py  main.py  pyproject.toml  talk2mcp-2.py
lesson6/: README.md  action.py  decision.py  example2-6.py  main.py  memory.py  models.py  perception.py  pyproject.toml
lesson7/: README.md  agent.py  decision.py  example7.py  main.py  pyproject.toml
lesson7/chrome-extension/: highlight.js  manifest.json  popup.html  popup.js
lesson7/faiss_index/: doc_index_cache.json  metadata.json
